tests/snapshots/snapshots__pipeline@coeffect_reserved.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/coeffect_reserved.pr
---
== tokens ==
VOpen Fn Ident("apply") LParen Ident("f") Colon LParen LParen KwInt RParen Arrow KwInt RParen At Ident("unique") Comma Ident("x") Colon KwInt RParen Colon KwInt Eq Ident("f") LParen Ident("x") RParen VSemi Fn Ident("main") LParen RParen Colon KwInt Eq Ident("apply") LParen Lambda LParen Ident("y") RParen Arrow Ident("y") Plus Int(IntLit { value: 1, suffix: None }) Comma Int(IntLit { value: 41, suffix: None }) RParen VClose

== ast ==
Program {
    types: [],
    effects: [],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "apply",
            params: [
                Param {
                    name: "f",
                    ty: Some(
                        Coeffect(
                            Fun(
                                [
                                    Int,
                                ],
                                Empty,
                                Int,
                            ),
                            CoeffectRow {
                                facts: [
                                    Unique,
                                ],
                            },
                        ),
                    ),
                    borrow: false,
                    default: None,
                },
                Param {
                    name: "x",
                    ty: Some(
                        Int,
                    ),
                    borrow: false,
                    default: None,
                },
            ],
            ret: Some(
                Int,
            ),
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "f",
                        ),
                        span: 287..288,
                    },
                    [
                        Spanned {
                            node: Var(
                                "x",
                            ),
                            span: 289..290,
                        },
                    ],
                ),
                span: 287..291,
            },
            wheres: [],
            span: 232..291,
        },
        Decl {
            name: "main",
            params: [],
            ret: Some(
                Int,
            ),
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "apply",
                        ),
                        span: 311..316,
                    },
                    [
                        Spanned {
                            node: Lam(
                                [
                                    Param {
                                        name: "y",
                                        ty: None,
                                        borrow: false,
                                        default: None,
                                    },
                                ],
                                Spanned {
                                    node: Bin(
                                        Add,
                                        Spanned {
                                            node: Var(
                                                "y",
                                            ),
                                            span: 325..326,
                                        },
                                        Spanned {
                                            node: Int(
                                                IntLit {
                                                    value: 1,
                                                    suffix: None,
                                                },
                                            ),
                                            span: 329..330,
                                        },
                                    ),
                                    span: 325..330,
                                },
                            ),
                            span: 317..330,
                        },
                        Spanned {
                            node: Int(
                                IntLit {
                                    value: 41,
                                    suffix: None,
                                },
                            ),
                            span: 332..334,
                        },
                    ],
                ),
                span: 311..335,
            },
            wheres: [],
            span: 293..335,
        },
    ],
}

== types ==
[E6052] Type Error: usage fact `unique` is reserved but not implemented
   ╭─[ <source>:4:1 ]
   │
 4 │ fn apply(f : ((Int) -> Int) @ unique, x : Int) : Int = f(x)
   │ ─────────────────────────────┬─────────────────────────────  
   │                              ╰─────────────────────────────── usage fact `unique` is reserved but not implemented
───╯
